--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-scss": "^3.21.0",
+    "tailwindcss": "^3.2.7",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-middleware": "^6.0.1",
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "flowbite": "^1.6.4",
     "lodash": "^4.17.21"
   },
   "main": "webpack.config.js"
